--- a/releases.yaml
+++ b/releases.yaml
@@ -69,15 +69,15 @@ releases:
             python3-mqttrpc: 1.1.1
             python3-wb-common: 1.3.3
             python3-wb-mcu-fw-updater: 1.0.7
-            python3-wb-update-manager: "1.0"
+            python3-wb-update-manager: 1.0.1
             sensor-tools-scada-client: "1.1"
             serial-tool: "1.0"
             tcc: 0.9.27~git20170226.c4c3f500-1
             u-boot-tools-wb: 2:2017.03+wb-2
             u-boot-tools: 2:2017.03+wb-2
             watchdog: 5.15-1
-            wb-configs-stretch: "2.0"
-            wb-configs: "2.0"
+            wb-configs-stretch: 2.0.1
+            wb-configs: 2.0.1
             wb-daemon-watchdogs: "1.1"
             wb-dt-overlays: "1.3"
             wb-essential: "1.0"
@@ -108,10 +108,10 @@ releases:
             wb-mqtt-timestamper: 1.10.1
             wb-mqtt-zabbix: "0.2"
             wb-mqtt-zway: 1.0.3+wb2
-            wb-rules-system: 1.6.11
+            wb-rules-system: 1.6.12
             wb-suite: "1.0"
-            wb-test-suite: "1.20"
-            wb-update-manager: "1.0"
+            wb-test-suite: "1.22"
+            wb-update-manager: 1.0.1
             wb-utils: "2.2"
             wb-zigbee2mqtt: 1.0.0
             wpagui: 2.3-1+deb8u4
@@ -144,7 +144,7 @@ releases:
             wb-mqtt-mbgate: 1.0.1
             wb-mqtt-serial: 2.7.1
             wb-mqtt-smartweb: 1.0.2
-            wb-rules: 2.6.3
+            wb-rules: 2.6.4
             z-way-server: 3.1.1
             zigbee2mqtt: 1.18.1
 
