--- a/releases.yaml
+++ b/releases.yaml
@@ -82,6 +82,7 @@ releases:
             wb-daemon-watchdogs: '1.1'
             wb-dt-overlays: '1.3'
             wb-essential: '1.0'
+            wb-homa-ism-radio: 1.17.3
             wb-homa-ninja-bridge: 1.9.1
             wb-homa-rfsniffer: 1.0.9
             wb-homa-zway: 1.0.3+wb2
@@ -96,6 +97,7 @@ releases:
             wb-mqtt-db-cli: 1.2.1
             wb-mqtt-homeui: 2.5.7
             wb-mqtt-knx: 0.1.2
+            wb-mqtt-lirc: 1.1.4
             wb-mqtt-mhz19: '1.0'
             wb-mqtt-sht1x: '1.0'
             wb-mqtt-smartbus: '1.2'
