--- a/releases.yaml
+++ b/releases.yaml
@@ -140,17 +140,17 @@ releases:
             wb-homa-adc: 2.3.0
             wb-homa-gpio: 2.5.1
             wb-homa-w1: 2.2.0
-            wb-hwconf-manager: 1.43.1
+            wb-hwconf-manager: 1.43.2
             wb-mqtt-adc: 2.3.1
             wb-mqtt-confed: 1.6.2
             wb-mqtt-dac: 1.1.3
             wb-mqtt-db: 2.5.2
             wb-mqtt-gpio: 2.5.2
-            wb-mqtt-homeui: 2.22.2
+            wb-mqtt-homeui: 2.22.3
             wb-mqtt-logs: 1.1.2
             wb-mqtt-mbgate: 1.1.1
             wb-mqtt-opcua: 1.0.3
-            wb-mqtt-serial: 2.41.3
+            wb-mqtt-serial: 2.41.3-wb2
             wb-mqtt-smartweb: 1.1.0
             wb-mqtt-w1: 2.2.0
             wb-rules: 2.10.2
