--- a/releases.yaml
+++ b/releases.yaml
@@ -72,7 +72,7 @@ releases:
             python3-mqttrpc: 1.1.1
             python3-paho-mqtt: 1.4.0-1
             python3-wb-common: 1.3.3
-            python3-wb-diag-collect: '0.2'
+            python3-wb-diag-collect: 1.0.0
             python3-wb-mcu-fw-updater: 1.0.10
             python3-wb-mqtt-metrics: 0.1.1
             python3-wb-update-manager: 1.0.2
@@ -85,7 +85,7 @@ releases:
             wb-configs-stretch: 2.1.1
             wb-configs: 2.1.1
             wb-daemon-watchdogs: '1.1'
-            wb-diag-collect: '0.2'
+            wb-diag-collect: 1.0.0
             wb-dt-overlays: '1.3'
             wb-essential: 1.4.0
             wb-homa-ism-radio: 1.17.3
@@ -146,11 +146,11 @@ releases:
             wb-mqtt-dac: 1.1.3
             wb-mqtt-db: 2.5.2
             wb-mqtt-gpio: 2.5.2
-            wb-mqtt-homeui: 2.23.1
+            wb-mqtt-homeui: 2.23.1-wb1
             wb-mqtt-logs: 1.1.2
             wb-mqtt-mbgate: 1.1.1
             wb-mqtt-opcua: 1.0.3
-            wb-mqtt-serial: 2.41.3-wb2
+            wb-mqtt-serial: 2.41.3-wb3
             wb-mqtt-smartweb: 1.1.0
             wb-mqtt-w1: 2.2.0
             wb-rules: 2.10.2
