--- a/releases.yaml
+++ b/releases.yaml
@@ -152,7 +152,7 @@ releases:
             wb-mqtt-logs: 1.2.0
             wb-mqtt-mbgate: 1.1.2
             wb-mqtt-opcua: 1.0.4
-            wb-mqtt-serial: 2.45.0
+            wb-mqtt-serial: 2.45.0-wb1
             wb-mqtt-smartweb: 1.1.1
             wb-mqtt-w1: 2.2.1
             wb-rules: 2.11.1
