--- a/releases.yaml
+++ b/releases.yaml
@@ -185,6 +185,83 @@ releases:
             wb-test-suite: '1.20'
             z-way-server: 2.2.5-1
 
+        firmwares:
+            # WB-MR
+            mr2m: 1.15.1
+            mr2m_k6: 1.15.3
+            mr2mG: 1.16.3
+            mr3: 1.16.3
+            mr3G: 1.16.3
+            mr6: 1.16.3
+            mr6_042: 1.15.4
+            mr6G: 1.16.3
+            mr6c: 1.16.3
+            mr6cG: 1.16.3
+            mr6c_042: 1.16.2
+            mr6cu: 1.16.2
+            mr6cu_042: 1.16.2
+            mr6cuG: 1.16.3
+            mrps6: 1.15.3
+            mrps6G: 1.16.3
+            mrwl3: 1.16.3
+            mrwl3G: 1.16.3
+            mrwl3_042: 1.15.5
+            mrwm2: 1.15.0
+            mrwm2G: 1.16.4
+            wbmwac: 1.16.4
+            wbmwac_042: 1.15.6
+            wbmwacG: 1.16.3
+            # WB-MS
+            m1w2: 4.16.19  # no 4.2.0 on fw-releases; TODO: check fw
+            m1w2-21: 4.14.0
+            m1w2G21: 4.16.17
+            mir: 4.16.19  # no 4.6.0 on fw-releases; TODO: check fw
+            mir64: 4.16.19
+            mir64_gd: 4.16.19
+            mai2cc: 4.16.17
+            ms-33: 4.16.19  # no 4.6.0 on fw-releases; TODO: check fw
+            msv2-4.0: 4.16.19
+            msw3-48mh: 4.16.10
+            msw3-48mh30: 4.16.10
+            msw3-49: 4.16.19  # no 4.16.6 on fw-releases; TODO: check fw
+            msw3-49th30: 4.16.19
+            msw3-49-467: 4.16.8
+            msw3-49_gd: 4.16.13
+            msw3-49gd_oa: 4.16.19
+            msw3G49th: 4.16.19
+            # WB-MD
+            mdm3: 2.3.0
+            mdm3_042: 2.3.0
+            mdm3_26: 2.3.0  # no 2.2.2 on fw-releases; TODO: check fw
+            mdm3G26: 2.3.0
+            # WB-MAP
+            map3e: 2.3.2
+            map3e_36: 2.3.2
+            map3e_031f6: 2.3.2
+            map3eG: 2.3.5
+            map3h: 2.3.2
+            map3h51: 2.3.2
+            map6s: 2.3.2
+            map6s51: 2.3.2
+            map6se: 2.3.2
+            map12e: 2.3.2
+            map12eG: 2.3.5
+            map12h: 2.3.2
+            # WB-MRGB
+            mrgbw: 1.3.2
+            # WB-MCM
+            mcm8: 1.3.0
+            mcm8G: 1.3.0
+            # WB-MAO
+            mao4: 2.1.0
+            # WB-MAI
+            wb-mai-v10: 1.2.4
+            # WB-MIO
+            mio: 1.5.1
+            # WB-REF
+            ref-df: 1.0.1
+            refu: 1.0.0
+
     wb-2110:
         packages-common: &packages-wb-2110
             atecc-util: 0.4.5
@@ -551,6 +628,9 @@ suites:
     wb5/stretch:
         stable: wb-2110
         testing: wb-2201
+    firmwares:
+        testing: wb-2201
+        unstable: "@latest"
 
 targets:
     wb6/stretch:
