--- a/releases.yaml
+++ b/releases.yaml
@@ -200,6 +200,8 @@ releases:
             wb-suite: '1.0'
             wb-test-suite: '1.20'
             z-way-server: 2.2.5-1
+            u-boot-tools: 2:2017.03+wb-2
+            u-boot-tools-wb: 2:2017.03+wb-2
 
         firmwares:
             # WB-MR
