wb-2201: msw3G419 stable target

--- a/releases.yaml
+++ b/releases.yaml
@@ -247,6 +247,7 @@ releases:
             msw3-49_gd: 4.16.13
             msw3-49gd_oa: 4.16.19
             msw3G49th: 4.16.19
+            msw3G419: 4.17.7
             # WB-MD
             mdm3: 2.3.0
             mdm3_042: 2.3.0
