wb-2201: add wb-mqtt-iec104

--- a/releases.yaml
+++ b/releases.yaml
@@ -142,6 +142,7 @@ releases:
             wb-mqtt-db: 2.5.3
             wb-mqtt-gpio: 2.8.3
             wb-mqtt-homeui: 2.26.0
+            wb-mqtt-iec104: 1.0.1
             wb-mqtt-knx: 1.4.1
             wb-mqtt-logs: 1.2.0
             wb-mqtt-mbgate: 1.1.2
