wb-2201: map3eG16 comment

--- a/releases.yaml
+++ b/releases.yaml
@@ -266,7 +266,8 @@ releases:
             map12e: 2.3.2
             map12eG: 2.3.5
             map12h: 2.3.2
-            map3eG16: 2.3.6
+            map3eG16: 2.3.6 # map3eG16 в партии v1.2D случайно прошили прошивкой 2.3.7 хотя в стабильном релизе 2.3.6.
+                            # Решили не менять, вдруг нужен будет фикс. У пользователей будет ошибка пока не выпустим следующий релиз.
             map6seG16: 2.3.6
             map6sG16: 2.3.6
             # WB-MRGB
