--- a/releases.yaml
+++ b/releases.yaml
@@ -276,6 +276,7 @@ releases:
             mcm8G: 1.3.1
             # WB-MAO
             mao4: 2.1.0
+            mao4G: 2.1.0
             # WB-MAI
             wb-mai-v10: 1.2.4
             # WB-MIO
