--- a/releases.yaml
+++ b/releases.yaml
@@ -168,6 +168,7 @@ releases:
             u-boot-tools: 2:2021.10+wb1.1.1
             u-boot-tools-wb: 2:2021.10+wb1.1.1
             wb-hwconf-manager: 1.48.0
+            wb-mcu-fw-flasher: 1.0.8
             wb-utils: 3.5.0
 
         wb6/stretch:
