wb-2201: mr2mG mr6cuG mrwl3G comments about wrong version fw flashed in factory

--- a/releases.yaml
+++ b/releases.yaml
@@ -212,7 +212,8 @@ releases:
             # WB-MR
             mr2m: 1.15.2
             mr2m_k6: 1.15.3
-            mr2mG: 1.16.3
+            mr2mG: 1.16.3   # mr2mG в партиях v2.3G и v2.3H случайно прошили прошивкой 1.16.4 хотя в стабильном релизе 1.16.3.
+                            # Решили не менять, вдруг нужен будет фикс. У пользователей будет ошибка пока не выпустим следующий релиз.
             mr3: 1.16.3
             mr3G: 1.16.3
             mr6: 1.16.3
@@ -223,11 +224,13 @@ releases:
             mr6c_042: 1.16.2
             mr6cu: 1.16.2
             mr6cu_042: 1.16.2
-            mr6cuG: 1.16.3
+            mr6cuG: 1.16.3  # mr6cuG в партии v1.4C случайно прошили прошивкой 1.16.4 хотя в стабильном релизе 1.16.3.
+                            # Решили не менять, вдруг нужен будет фикс. У пользователей будет ошибка пока не выпустим следующий релиз.
             mrps6: 1.15.3
             mrps6G: 1.16.3
             mrwl3: 1.16.3
-            mrwl3G: 1.16.3
+            mrwl3G: 1.16.3  # mrwl3G в партии v1.3C случайно прошили прошивкой 1.16.4 хотя в стабильном релизе 1.16.3.
+                            # Решили не менять, вдруг нужен будет фикс. У пользователей будет ошибка пока не выпустим следующий релиз.
             mrwl3_042: 1.15.5
             mrwm2G: 1.17.5
             wbmwac: 1.16.4
