--- a/releases.yaml
+++ b/releases.yaml
@@ -276,6 +276,7 @@ releases:
             map6sG16: 2.3.6
             # WB-MRGB
             mrgbw: 3.0.0
+            mrgbwG: 3.0.0
             # WB-MCM
             mcm8: 1.3.1
             mcm8G: 1.3.1
