wb-2201: add msw3G419th target

--- a/releases.yaml
+++ b/releases.yaml
@@ -255,6 +255,7 @@ releases:
             msw3-49gd_oa: 4.16.19
             msw3G49th: 4.16.19
             msw3G419: 4.18.3
+            msw3G419th: 4.18.5
             # WB-MD
             mdm3: 2.3.0
             mdm3_042: 2.3.0
