--- a/releases.yaml
+++ b/releases.yaml
@@ -246,6 +246,7 @@ releases:
             mai2cc: 4.16.17
             ms-33: 4.16.19  # no 4.6.0 on fw-releases; TODO: check fw
             msv2-4.0: 4.16.19
+            msv2-4.0_gd: 4.18.6
             msw3-48mh: 4.16.10
             msw3-48mh30: 4.16.10
             msw3-49: 4.16.19  # no 4.16.6 on fw-releases; TODO: check fw
