--- a/releases.yaml
+++ b/releases.yaml
@@ -126,9 +126,9 @@ releases:
             fuse2fs: 1.43.4-2+wb1
             libcomerr2: 1.43.4-2+wb1
             libss2: 1.43.4-2+wb1
-            libwbmqtt1-3: 3.5.0
-            libwbmqtt1-3-dev: 3.5.0
-            libwbmqtt1-3-test-utils: 3.5.0
+            libwbmqtt1-3: 3.5.0-wb1
+            libwbmqtt1-3-dev: 3.5.0-wb1
+            libwbmqtt1-3-test-utils: 3.5.0-wb1
             nodejs: 12.19.0-1nodesource1
             ss-dev: 2.0-1.43.4-2+wb1
             wb-demo-kit-configs: 1.3.3
