comment mr2m target version

--- a/releases.yaml
+++ b/releases.yaml
@@ -209,7 +209,7 @@ releases:
 
         firmwares:
             # WB-MR
-            mr2m: 1.15.2
+            mr2m: 1.15.2        # на данном таргете на версиях старше 1.15.2 прошивка перестала помещаться в 12K (16K FLASH - 4K bootloader)
             mr2m_k6: 1.17.8
             mr2mG: 1.17.8
             mr3: 1.17.8
