wb-2204: mr versions (#103)

--- a/releases.yaml
+++ b/releases.yaml
@@ -209,29 +209,29 @@ releases:
 
         firmwares:
             # WB-MR
-            mr2m: 1.17.2
-            mr2m_k6: 1.17.7
-            mr2mG: 1.17.7
-            mr3: 1.17.7
-            mr3G: 1.17.7
-            mr6: 1.17.7
-            mr6_042: 1.17.7
-            mr6G: 1.17.7
-            mr6c: 1.17.7
-            mr6cG: 1.17.7
-            mr6c_042: 1.17.7
-            mr6cu: 1.17.7
-            mr6cu_042: 1.17.7
-            mr6cuG: 1.17.7
-            mrps6: 1.17.7
-            mrps6G: 1.17.7
-            mrwl3: 1.17.7
-            mrwl3G: 1.17.7
-            mrwl3_042: 1.17.7
-            mrwm2G: 1.17.7
-            wbmwac: 1.17.7
-            wbmwac_042: 1.17.7
-            wbmwacG: 1.17.7
+            mr2m: 1.15.2        # на данном таргете на версиях старше 1.15.2 прошивка перестала помещаться в 12K (16K FLASH - 4K bootloader)
+            mr2m_k6: 1.17.8
+            mr2mG: 1.17.8
+            mr3: 1.17.8
+            mr3G: 1.17.8
+            mr6: 1.17.8
+            mr6_042: 1.17.8
+            mr6G: 1.17.8
+            mr6c: 1.17.8
+            mr6cG: 1.17.8
+            mr6c_042: 1.17.8
+            mr6cu: 1.17.8
+            mr6cu_042: 1.17.8
+            mr6cuG: 1.17.8
+            mrps6: 1.17.8
+            mrps6G: 1.17.8
+            mrwl3: 1.17.8
+            mrwl3G: 1.17.8
+            mrwl3_042: 1.17.8
+            mrwm2G: 1.17.8
+            wbmwac: 1.17.8
+            wbmwac_042: 1.17.8
+            wbmwacG: 1.17.8
             # WB-MS
             m1w2: 4.18.6
             m1w2-21: 4.18.6
