--- a/releases.yaml
+++ b/releases.yaml
@@ -519,6 +519,7 @@ releases:
             mr6cu_042: 1.16.2
             mr6cuG: 1.16.3  # mr6cuG в партии v1.4C случайно прошили прошивкой 1.16.4 хотя в стабильном релизе 1.16.3.
                             # Решили не менять, вдруг нужен будет фикс. У пользователей будет ошибка пока не выпустим следующий релиз.
+            mr6cpG: 1.18.0
             mrps6: 1.15.3
             mrps6G: 1.16.3
             mrwl3: 1.16.3
