wb-2201 and wb-2204: add new target mr6cpG for WB-MR (#104)

--- a/releases.yaml
+++ b/releases.yaml
@@ -223,6 +223,7 @@ releases:
             mr6cu: 1.17.8
             mr6cu_042: 1.17.8
             mr6cuG: 1.17.8
+            mr6cpG: 1.18.0
             mrps6: 1.17.8
             mrps6G: 1.17.8
             mrwl3: 1.17.8
@@ -518,6 +519,7 @@ releases:
             mr6cu_042: 1.16.2
             mr6cuG: 1.16.3  # mr6cuG в партии v1.4C случайно прошили прошивкой 1.16.4 хотя в стабильном релизе 1.16.3.
                             # Решили не менять, вдруг нужен будет фикс. У пользователей будет ошибка пока не выпустим следующий релиз.
+            mr6cpG: 1.18.0
             mrps6: 1.15.3
             mrps6G: 1.16.3
             mrwl3: 1.16.3
