--- a/releases.yaml
+++ b/releases.yaml
@@ -111,7 +111,7 @@ releases:
             wb-test-suite-dummy: 1.9.0
             wb-update-manager: 1.2.5
             wb-utils: 3.5.0
-            wb-zigbee2mqtt: 1.0.0
+            wb-zigbee2mqtt: 1.1.0
             wpagui: 2.3-1+deb8u4
             wpasupplicant: 2.3-1+deb8u4
 
@@ -158,7 +158,8 @@ releases:
             wb-test-suite-deps: 1.9.0
             z-way-server: 3.2.2-93-g8c133c1
             zbw: '1.2'
-            zigbee2mqtt: 1.18.1
+            zigbee2mqtt: 1.25.0
+            zigbee2mqtt-1.18.1: 1.18.1
 
         wb7/stretch:
             <<: *packages-wb-2204-armhf
