--- a/releases.yaml
+++ b/releases.yaml
@@ -149,7 +149,7 @@ releases:
             wb-mqtt-logs: 1.2.0
             wb-mqtt-mbgate: 1.1.2
             wb-mqtt-opcua: 1.0.4
-            wb-mqtt-serial: 2.59.2
+            wb-mqtt-serial: 2.59.2-wb1
             wb-mqtt-smartweb: 1.1.1
             wb-mqtt-snmp: 1.2.0
             wb-mqtt-w1: 2.2.1
