WB-MRGBW-D 3.2.0-rc1 to testing

--- a/releases.yaml
+++ b/releases.yaml
@@ -1014,8 +1014,8 @@ releases:
             map6seG16: 2.3.7
             map6sG16: 2.3.7
             # WB-MRGB
-            mrgbw: 3.0.4
-            mrgbwG: 3.0.4
+            mrgbw: 3.2.0-rc1
+            mrgbwG: 3.2.0-rc1
             # WB-MCM
             mcm8: 1.4.0-rc1
             mcm8G: 1.4.0-rc1
