WB7.3.2 support linux update
testing 5.10.35-wb118 => 5.10.35-wb119
stable 5.10.35-wb115+wb101+108 => 5.10.35-wb115+wb102+119

--- a/releases.yaml
+++ b/releases.yaml
@@ -113,9 +113,9 @@ releases:
         wb7/bullseye:
             <<: *packages-wb-2207
 
-            linux-headers-wb7: 5.10.35-wb118
-            linux-image-wb7: 5.10.35-wb118
-            linux-libc-dev: 5.10.35-wb118
+            linux-headers-wb7: 5.10.35-wb119
+            linux-image-wb7: 5.10.35-wb119
+            linux-libc-dev: 5.10.35-wb119
             u-boot-wb7: 2:2021.10+wb1.4.0
             u-boot-tools: 2:2021.10+wb1.4.0
             u-boot-tools-wb: 2:2021.10+wb1.4.0
@@ -299,9 +299,9 @@ releases:
         wb7/stretch:
             <<: *packages-wb-2207-armhf-stretch
 
-            linux-headers-wb7: 5.10.35-wb118
-            linux-image-wb7: 5.10.35-wb118
-            linux-libc-dev: 5.10.35-wb118
+            linux-headers-wb7: 5.10.35-wb119
+            linux-image-wb7: 5.10.35-wb119
+            linux-libc-dev: 5.10.35-wb119
             u-boot-wb7: 2:2021.10+wb1.4.0
             u-boot-tools: 2:2021.10+wb1.4.0
             u-boot-tools-wb: 2:2021.10+wb1.4.0
@@ -512,7 +512,7 @@ releases:
             <<: *packages-wb-2204-armhf
 
             linux-headers-wb7: 5.10.35-wb111
-            linux-image-wb7: 5.10.35-wb115+wb101+108~exp~release+wb+2204+wb7+stretch~316~gf398bbc
+            linux-image-wb7: 5.10.35-wb115+wb102+119~exp~release+wb+2204+wb7+stretch~320~g45b8651
             linux-libc-dev: 5.10.35-wb111
             u-boot-wb7: 2:2021.10+wb1.4.0
             u-boot-tools: 2:2021.10+wb1.4.0
